<resources>
    <string name="app_name">ElectricCarApp</string>
    <string name="page_title">Electric Car</string>
    <string name="car_page">Carros</string>
    <string name="favorites">Favoritos</string>
    <string name="car_price">Preço:</string>
    <string name="battery">Bateria:</string>
    <string name="potency">Potência:</string>
    <string name="recharge">Recarga:</string>
    <string name="autonomy_value">Preço Kwh</string>
    <string name="kwh_done_value">Kwh percorridos</string>
    <string name="calculate_btn_text">Calcular</string>
</resources>